# mcp-databricks-server

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  CONTRIBUTING.md  LICENSE  README.md  databricks_formatter.py  dbapi.py  flake.nix  main.py  mise.toml  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/mcp_databricks_server/: __init__.py  __main__.py  dbapi.py  formatter.py  sdk_utils.py
tests/: __init__.py  conftest.py  test_formatter.py  test_integration.py
