[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-databricks-server"
version = "0.1.0"
description = "MCP server for executing SQL queries on Databricks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.40.0",
    "httpx>=0.28.0",
    "mcp[cli]>=1.25.0",
    "python-dotenv>=1.2.0",
    "requests>=2.32.0",
]

[project.scripts]
mcp-databricks-server = "mcp_databricks_server:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "PERF", # Perflint
]
ignore = [
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_databricks_server"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mcp.*", "databricks.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
